update about text

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="description" content="An independent self-starter front-end developer who uses her curious mind, attention to detail and persistence to innovate and solve problems in order to build intuitive and accessible websites and applications.">
+		<meta name="description" content="As an accomplished front-end developer, I am driven by my curiosity, attention to detail, and persistence to innovate and tackle complex problems. With a track record of building intuitive websites and applications, I am passionate about creating seamless user experiences.">
 		<meta name="keywords" content="Frontend Web Developer, Web Designer, Toronto, Fernanda Thiesen">
 		<meta name="author" content="Fernanda Thiesen">
 		<meta property="og:image" content="./assets/fernanda-thiesen.jpg">
@@ -90,15 +90,15 @@
 						<h2 class="subtitle">About me</h2>
 						<!-- <h3 class="title">Team player + decision maker + innovator</h3> -->
 						<p>
-							An independent self-starter front-end developer who uses her curious mind, attention to detail and persistence to innovate and solve problems in order to build intuitive websites and applications.
+							As an accomplished front-end developer, I am driven by my curiosity, attention to detail, and persistence to innovate and tackle complex problems. With a track record of building intuitive websites and applications, I am passionate about creating seamless user experiences.
 						</p>
 						<p>
-							As a Software Engineer at Milborne Group, I develop and maintain a real estate sales web app, resolving bugs, improving code quality, enhancing user experience, adding functionalities and building new features.
+							In my current role as a Software Engineer at Milborne Group, I am responsible for developing and maintaining a cutting-edge real estate sales web app. This includes resolving bugs, improving code quality, enhancing user experience, and building new features to meet the evolving needs of the business.
 						</p>
 						<p>
-							I am a Juno College of Technology graduate with 20 years of experience in Web Design and a Bachelor’s Degree in Social Communications, with specialization in Marketing, and looking to explore new opportunities that help me grow as a developer.</p>
+							I am a Juno College of Technology graduate, specializing in web development, with over 20 years of experience in the field of web design. Additionally, I hold a Bachelor's Degree in Social Communications with a specialization in Marketing. As a lifelong learner, I am always seeking out new opportunities to expand my knowledge and skills as a developer.</p>
 						<p>
-							You can learn more about my top talents, work style and preferences on my
+							To learn more about my top talents, work style, and preferences, please visit my 
 							<a href="https://secure.plum.io/p/4o5_E4mx7eIXeMtsCGI3Rw" target="_blank"
 								>Plum Profile</a
 							>.
