update xp at milborne

--- a/index.html
+++ b/index.html
@@ -501,8 +501,10 @@
 								<li>Successfully planned, designed and developed various features with the goal of automating the set up of new projects in the company’s sales web application, reducing managers’ requests and redirecting the development team’s efforts away from manual and repetitive tasks.</li>
 								<li>Independently built a feature that allows admins to set multiple conditions used in the generation of purchase and sale agreements, including the selection of unit details and documents to be inserted as a specific page of the contract, allowing for each deal to be fully customized.</li>
 								<li>Actively and consistently suggested and implemented UI improvements to boost visual experience and usability, as well as created table and chart reports, enhancing data analysis and visualization for decision making.</li>
+								<li>Independently redesigned the entire app utilizing Material UI styles in accordance with a newly established brand identity provided by a design agency, bridging the design gaps for areas that were not covered, ensuring a seamless and consistent design throughout the app.</li>
 								<li>Collaborated closely with the backend developer to develop a unit tracker table from scratch in order to incorporate into the app a complex spreadsheet used by sales admins to track deals, also allowing them to set instructions, statuses and add detailed information and notes for all units in just one place.</li>
 								<li>Constantly tweaked the backend not only to accommodate new features, but also to reactivate cron jobs for email reminders and integrate the app with a third party email delivery platform, as well as develop an email tracking feature that allows users to see an activity log of opened emails sent out to purchasers and realtors, which offered me great exposure to backend technologies within the MERN stack and GraphQL Apollo Server and schemas.</li>
+								<li>Successfully upgraded the app to the latest versions of React and Material UI, which involved handling significant breaking changes related to the React Hook Form library, MUI Date Component and Apollo Client.</li>
 							</ul>
 						</div>
 						<div>
