add mongodb logo, update wording and remove sticky sections

--- a/index.html
+++ b/index.html
@@ -139,11 +139,15 @@
 					</div>
 					<div class="skill">
 						<img src="./assets/icons/react.svg" alt="react icon">
-						<h4>React</h4>
+						<h4>React JS</h4>
 					</div>
 					<div class="skill">
 						<img src="./assets/icons/graphql.svg" alt="graphql icon">
 						<h4>Graphql</h4>
+					</div>
+					<div class="skill">
+						<img src="./assets/icons/mongodb.svg" alt="mongodb icon">
+						<h4>MongoDB</h4>
 					</div>
 					<div class="skill">
 						<img src="./assets/icons/firebase.svg" alt="firebase icon">
@@ -180,6 +184,7 @@
 				</div>
 			</section>
 			<section class="portfolio">
+				<!-- Firebase Authentication Web App -->
 				<div class="project">
 					<div class="wrapper">
 						<div class="left">
@@ -205,6 +210,7 @@
 						</div>
 					</div>
 				</div>
+				<!-- Popsipoll -->
 				<div class="project">
 					<div class="wrapper">
 						<div class="left">
@@ -235,6 +241,7 @@
 						</div>
 					</div>
 				</div>
+				<!-- Must Watch -->
 				<div class="project">
 					<div class="wrapper">
 						<div class="left">
@@ -260,6 +267,7 @@
 						</div>
 					</div>
 				</div>
+				<!-- Amazed by TV -->
 				<div class="project">
 					<div class="wrapper">
 						<div class="left">
@@ -292,6 +300,7 @@
 						</div>
 					</div>
 				</div>
+				<!-- The Lord of the Rings Quotes -->
 				<div class="project">
 					<div class="wrapper">
 						<div class="left">
@@ -324,6 +333,7 @@
 						</div>
 					</div>
 				</div>
+				<!-- Supplements Calculator -->
 				<div class="project">
 					<div class="wrapper">
 						<div class="left">
@@ -355,6 +365,7 @@
 						</div>
 					</div>
 				</div>
+				<!-- The Hangry Tummy -->
 				<div class="project">
 					<div class="wrapper">
 						<div class="left">
@@ -377,6 +388,7 @@
 						</div>
 					</div>
 				</div>
+				<!-- Boat-Ride Adventures -->
 				<div class="project">
 					<div class="wrapper">
 						<div class="left">
@@ -410,6 +422,7 @@
 						</div>
 					</div>
 				</div>
+				<!-- Build IQ -->
 				<div class="project">
 					<div class="wrapper">
 						<div class="left">
@@ -429,8 +442,9 @@
 							</div>
 						</div>
 					</div>
-				</div>				
-				<div class="project">
+				</div>
+				<!-- Site Toaster -->
+				<!-- <div class="project">
 					<div class="wrapper">
 						<div class="left">
 							<h3 class="subtitle">WEB DESIGN, WORDPRESS</h3>
@@ -451,7 +465,7 @@
 						</div>
 					
 					</div>
-				</div>				
+				</div>				 -->
 			</section>
 			<section class="fixme" id="marquee">
 				<div class="marquee">
@@ -463,6 +477,7 @@
 						<li>JavaScript</li>
 						<li>ReactJS</li>
 						<li>GraphQL</li>
+						<li>MongoDB</li>
 						<li>Firebase</li>
 						<li>GitHub</li>
 						<li>GitLab</li>
@@ -479,6 +494,7 @@
 						<li>JavaScript</li>
 						<li>ReactJS</li>
 						<li>GraphQL</li>
+						<li>MongoDB</li>
 						<li>Firebase</li>
 						<li>GitHub</li>
 						<li>GitLab</li>
@@ -500,7 +516,7 @@
 							<ul>
 								<li>Successfully planned, designed and developed various features with the goal of automating the set up of new projects in the company’s sales web application, reducing managers’ requests and redirecting the development team’s efforts away from manual and repetitive tasks.</li>
 								<li>Independently built a feature that allows admins to set multiple conditions used in the generation of purchase and sale agreements, including the selection of unit details and documents to be inserted as a specific page of the contract, allowing for each deal to be fully customized.</li>
-								<li>Actively and consistently suggested and implemented UI improvements to boost visual experience and usability, as well as created table and chart reports, enhancing data analysis and visualization for decision making.</li>
+								<li>Actively and consistently proposed and implemented UI enhancements to boost visual experience and usability, as well as created table and chart reports, improving data analysis and visualization, facilitating decision-making.</li>
 								<li>Independently redesigned the entire app utilizing Material UI styles in accordance with a newly established brand identity provided by a design agency, bridging the design gaps for areas that were not covered, ensuring a seamless and consistent design throughout the app.</li>
 								<li>Collaborated closely with the backend developer to develop a unit tracker table from scratch in order to incorporate into the app a complex spreadsheet used by sales admins to track deals, also allowing them to set instructions, statuses and add detailed information and notes for all units in just one place.</li>
 								<li>Constantly tweaked the backend not only to accommodate new features, but also to reactivate cron jobs for email reminders and integrate the app with a third party email delivery platform, as well as develop an email tracking feature that allows users to see an activity log of opened emails sent out to purchasers and realtors, which offered me great exposure to backend technologies within the MERN stack and GraphQL Apollo Server and schemas.</li>
