--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="description" content="As an accomplished front-end developer, I am driven by my curiosity, attention to detail, and persistence to innovate and tackle complex problems. With a track record of building intuitive websites and applications, I am passionate about creating seamless user experiences.">
+		<meta name="description" content="With several years of hands-on experience, I bring a practical background in front-end development. My work is driven by curiosity, attention to detail, and persistence to innovate and tackle complex problems. With a track record of building intuitive websites and applications, I am passionate about creating seamless user experiences.">
 		<meta name="keywords" content="Frontend Web Developer, Web Designer, Toronto, Fernanda Thiesen">
 		<meta name="author" content="Fernanda Thiesen">
 		<meta property="og:image" content="./assets/fernanda-thiesen.jpg">
@@ -90,7 +90,7 @@
 						<h2 class="subtitle">About me</h2>
 						<!-- <h3 class="title">Team player + decision maker + innovator</h3> -->
 						<p>
-							As an accomplished front-end developer, I am driven by my curiosity, attention to detail, and persistence to innovate and tackle complex problems. With a track record of building intuitive websites and applications, I am passionate about creating seamless user experiences.
+							With several years of hands-on experience, I bring a practical background in front-end development. My work is driven by curiosity, attention to detail, and persistence to innovate and tackle complex problems. With a track record of building intuitive websites and applications, I am passionate about creating seamless user experiences.
 						</p>
 						<p>
 							In my current role as a Software Engineer at Milborne Group, I am responsible for developing and maintaining a cutting-edge real estate sales web app. This includes resolving bugs, improving code quality, enhancing user experience, and building new features to meet the evolving needs of the business.
