finished before and after page

--- a/redesign.html
+++ b/redesign.html
@@ -71,27 +71,54 @@
 		</header>
 		
 		<main>
-			<div class="wrapper before-and-after">
-				<section>
-						<div>
-							<h2>Screen One</h2>
-							<div class='container'>
-								<div class='img' style="background-image: url('./assets/fernanda-thiesen.jpg')"></div>
-								<div class='img foreground-img' style="background-image: url('./assets/fthiesen.jpg')"></div>
-								<input type="range" min="1" max="100" value="50" class="slider" name='slider' id="slider">
-							</div>		
+			<section class="wrapper before-and-after">
+				<div>
+					<h2>Login Screen</h2>
+					<div class='slider-container'>
+						<div class='img' style="background-image: url('./assets/redesign/login-after.png')"></div>
+						<div class='img foreground-img img1' style="background-image: url('./assets/redesign/login-before.png')"></div>
+						<input type="range" min="0" max="100" value="50" class="slider" name='slider1' id="slider1">
+						<div class='slider-button  slider-button1'></div>
 					</div>
-				</section>
-				<section >
-						<div>
-							<h2>Screen Two</h2>
-							<div class='container'>
-								<div class='img' style="background-image: url('./assets/projects/amazed-by-tv.webp')"></div>
-								<div class='img foreground-img' style="background-image: url('./assets/projects/authentication-app.webp')"></div>
-								<input type="range" min="1" max="100" value="50" class="slider" name='slider' id="slider">
-							</div>		
-				</section>
-			</div>
+				</div>
+				<div>
+					<h2>Building Grid</h2>
+					<div class='slider-container'>
+						<div class='img' style="background-image: url('./assets/redesign/grid-after.png')"></div>
+						<div class='img foreground-img img2' style="background-image: url('./assets/redesign/grid-before.png')"></div>
+						<input type="range" min="0" max="100" value="50" class="slider" name='slider2' id="slider2">
+						<div class='slider-button slider-button2'></div>
+					</div>
+				</div>
+				<div>
+					<h2>Review Deal</h2>
+					<div class='slider-container'>
+						<div class='img' style="background-image: url('./assets/redesign/review-after.png')"></div>
+						<div class='img foreground-img img3' style="background-image: url('./assets/redesign/review-before.png')"></div>
+						<input type="range" min="0" max="100" value="50" class="slider" name='slider3' id="slider3">
+						<div class='slider-button slider-button3'></div>
+					</div>
+				</div>
+				<div>
+					<h2>Bed Type Graphs</h2>
+					<div class='slider-container'>
+						<div class='img' style="background-image: url('./assets/redesign/bedtype-after.png')"></div>
+						<div class='img foreground-img img4' style="background-image: url('./assets/redesign/bedtype-before.png')"></div>
+						<input type="range" min="0" max="100" value="50" class="slider" name='slider4' id="slider4">
+						<div class='slider-button slider-button4'></div>
+					</div>
+				</div>
+				<div>
+					<h2>CRM</h2>
+					<div class='slider-container'>
+						<div class='img' style="background-image: url('./assets/redesign/crm-after.png')"></div>
+						<div class='img foreground-img img5' style="background-image: url('./assets/redesign/crm-before.png')"></div>
+						<input type="range" min="0" max="100" value="50" class="slider" name='slider5' id="slider5">
+						<div class='slider-button slider-button5'></div>
+					</div>
+				</div>
+				<a href="/" class="btn">< Back to the homepage</a>
+			</section>
 			<section class="contact" id="contact">
 				<div class="wrapper">
 					<h2 class="subtitle">Contact</h2>
@@ -196,11 +223,15 @@
 			const datetime = new Date().getFullYear()
 			document.getElementById("current-year").textContent = datetime
 
-			$("#slider").on("input change", (e)=> {
+			const slides = [1,2,3,4,5]
+			slides.forEach(slideIndex => {
+				$(`#slider${slideIndex}`).on("input change", (e)=> {
 				const sliderPos = e.target.value;
-				// Update the width of the foreground image
-				$('.foreground-img').css('width', `${sliderPos}%`)
+				$(`.img${slideIndex}`).css('width', `${sliderPos}%`)
+				$(`.slider-button${slideIndex}`).css('left', `calc(${sliderPos}% - 15px)`)
 			});
+			})
+			
 		</script>			
 	</body>
 </html>
