resize images and add light mode

--- a/redesign-light-mode.html
+++ b/redesign-light-mode.html
@@ -57,7 +57,7 @@
 
 		</style>
 		
-		<title>Fê Codes - BuildIQ UI Redesign</title>
+		<title>Fê Codes - BuildIQ UI Redesign - Light Mode</title>
 	</head>
 	<body>
 		<header>
@@ -67,7 +67,7 @@
 				</div>
 				<div class="content" style="padding: 80px 0 50px;">
 					<h1>BuildIQ UI Redesign</h1>
-					<p>(<a href="/redesign-light-mode.html">see ligh mode</a>)</p>
+					<p>(<a href="/redesign.html">see dark mode</a>)</p>
 				</div>
 			</div>
 		</header>
@@ -77,7 +77,7 @@
 				<div>
 					<h2>Login Screen</h2>
 					<div class='slider-container'>
-						<div class='img' style="background-image: url('./assets/redesign/login-after.png')"></div>
+						<div class='img' style="background-image: url('./assets/redesign/login-after2.png')"></div>
 						<div class='img foreground-img img1' style="background-image: url('./assets/redesign/login-before.png')"></div>
 						<input type="range" min="0" max="100" value="50" class="slider" name='slider1' id="slider1">
 						<div class='slider-button  slider-button1'></div>
@@ -86,7 +86,7 @@
 				<div>
 					<h2>Building Grid</h2>
 					<div class='slider-container'>
-						<div class='img' style="background-image: url('./assets/redesign/grid-after.png')"></div>
+						<div class='img' style="background-image: url('./assets/redesign/grid-after2.png')"></div>
 						<div class='img foreground-img img2' style="background-image: url('./assets/redesign/grid-before.png')"></div>
 						<input type="range" min="0" max="100" value="50" class="slider" name='slider2' id="slider2">
 						<div class='slider-button slider-button2'></div>
@@ -95,7 +95,7 @@
 				<div>
 					<h2>Review Deal</h2>
 					<div class='slider-container'>
-						<div class='img' style="background-image: url('./assets/redesign/review-after.png')"></div>
+						<div class='img' style="background-image: url('./assets/redesign/review-after2.png')"></div>
 						<div class='img foreground-img img3' style="background-image: url('./assets/redesign/review-before.png')"></div>
 						<input type="range" min="0" max="100" value="50" class="slider" name='slider3' id="slider3">
 						<div class='slider-button slider-button3'></div>
@@ -104,7 +104,7 @@
 				<div>
 					<h2>Bed Type Graphs</h2>
 					<div class='slider-container'>
-						<div class='img' style="background-image: url('./assets/redesign/bedtype-after.png')"></div>
+						<div class='img' style="background-image: url('./assets/redesign/bedtype-after2.png')"></div>
 						<div class='img foreground-img img4' style="background-image: url('./assets/redesign/bedtype-before.png')"></div>
 						<input type="range" min="0" max="100" value="50" class="slider" name='slider4' id="slider4">
 						<div class='slider-button slider-button4'></div>
@@ -113,7 +113,7 @@
 				<div>
 					<h2>CRM</h2>
 					<div class='slider-container'>
-						<div class='img' style="background-image: url('./assets/redesign/crm-after.png')"></div>
+						<div class='img' style="background-image: url('./assets/redesign/crm-after2.png')"></div>
 						<div class='img foreground-img img5' style="background-image: url('./assets/redesign/crm-before.png')"></div>
 						<input type="range" min="0" max="100" value="50" class="slider" name='slider5' id="slider5">
 						<div class='slider-button slider-button5'></div>
