make before and after mobile friendly

--- a/redesign-light-mode.html
+++ b/redesign-light-mode.html
@@ -5,9 +5,8 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-		<meta name="description" content="Independently redesigned the entire app utilizing Material UI styles in accordance with a newly established brand identity provided by a design agency, ensuring a seamless and consistent design throughout the app.">
-		<meta name="keywords" content="Experience with Material UI, MUI, Redesign, Frontend Web Developer">
-		<meta name="author" content="Fernanda Thiesen">
+		<meta name="description" content="Light Mode - Independently redesigned the entire app utilizing Material UI styles in accordance with a newly established brand identity provided by a design agency, ensuring a seamless and consistent design throughout the app.">
+		<meta name="keywords" content="Experience with Material UI, Light Mode, MUI, Redesign, Frontend Web Developer">
 
 		<meta name="author" content="Fernanda Thiesen">
 		<meta property="og:image" content="./assets/fernanda-thiesen.jpg">
@@ -232,9 +231,7 @@
 					$(`.img${slideIndex}`).css('width', `${sliderPos}%`)
 					$(`.slider-button${slideIndex}`).css('left', `calc(${sliderPos}% - 15px)`)
 				});
-			})
-			
+			})			
 		</script>			
 	</body>
 </html>
-<!-- TODO: MAKE IT MOBILE FRIENDLY -->
