scroll to experience

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 							With several years of hands-on experience, I bring a practical background in front-end development. My work is driven by curiosity, attention to detail, and persistence to innovate and tackle complex problems. With a track record of building intuitive websites and applications, I am passionate about creating seamless user experiences.
 						</p>
 						<p>
-							In my current role as a Software Engineer at Milborne Group, I am responsible for developing and maintaining a cutting-edge real estate sales web app. This includes resolving bugs, improving code quality, enhancing user experience, and building new features to meet the evolving needs of the business.
+							In my current role as a Software Developer at Milborne Group, I am responsible for developing and maintaining a cutting-edge real estate sales web app. This includes resolving bugs, improving code quality, enhancing user experience, and building new features to meet the evolving needs of the business (<a href="#experience">details about my experience</a>).
 						</p>
 						<p>
 							I am a Juno College of Technology graduate, specializing in web development, with over 20 years of experience in the field of web design. Additionally, I hold a Bachelor's Degree in Social Communications with a specialization in Marketing. As a lifelong learner, I am always seeking out new opportunities to expand my knowledge and skills as a developer.</p>
