--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
 							<h3 class="title">Front End Web Developer (2021-Present)</h3>
 							<h4>Milborne Group</h4>
 							<p>
-								As a Software Engineer at Milborne, I develop and maintain a real estate sales web
+								As a Software Developer at Milborne, I develop and maintain a real estate sales web
 								app, resolving bugs, improving code quality, enhancing user experience, adding
 								functionalities and building new features.
 							</p>
