--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
 									<a href="/redesign.html">(see before and after screenshots).</a>
 								</li>
 								<li>
-									Collaborated closely with the backend developer to develop a unit tracker table
+									Collaborated closely with the backend developer to develop a units tracker table
 									from scratch in order to incorporate into the app a complex spreadsheet used by
 									sales admins to track deals, also allowing them to set instructions, statuses and
 									add detailed information and notes for all units in just one place.
@@ -618,8 +618,8 @@
 									GraphQL Apollo Server and schemas.
 								</li>
 								<li>
-									Successfully upgraded the app to the latest versions of React and Material UI,
-									which involved handling significant breaking changes related to the React Hook
+									Successfully upgraded the app to the latest versions of Node, React and Material
+									UI, which involved handling significant breaking changes related to the React Hook
 									Form library, MUI Date Component and Apollo Client.
 								</li>
 							</ul>
