update experience text

--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta
 			name="description"
-			content="With several years of hands-on experience, I bring a practical background in front-end development. My work is driven by curiosity, attention to detail, and persistence to innovate and tackle complex problems. With a track record of building intuitive websites and applications, I am passionate about creating seamless user experiences."
+			content="With several years of hands-on experience, I bring a practical background in full stack development. My work is driven by curiosity, attention to detail, and persistence to innovate and tackle complex problems. With a track record of building intuitive websites and applications, I am passionate about creating seamless user experiences."
 		/>
 		<meta
 			name="keywords"
-			content="Frontend Web Developer, Web Designer, Toronto, Fernanda Thiesen"
+			content="Full Stack Web Developer, Web Designer, Toronto, Fernanda Thiesen"
 		/>
 		<meta name="author" content="Fernanda Thiesen" />
 		<meta property="og:image" content="./assets/fernanda-thiesen.jpg" />
 		<meta
 			property="og:image:alt"
-			content="Fernanda Thiesen - Front-end developer with experience in graphic design and marketing"
+			content="Fernanda Thiesen - Full stack developer with experience in graphic design and marketing"
 		/>
 
 		<script
@@ -106,7 +106,7 @@
 			}
 		</style>
 
-		<title>Fê Codes - Fernanda Thiesen - Frontend Web Developer - Toronto</title>
+		<title>Fê Codes - Fernanda Thiesen - Ful Stack Web Developer - Toronto</title>
 	</head>
 	<body>
 		<header>
@@ -116,7 +116,7 @@
 				</div>
 				<div class="content">
 					<h5>Hi <span class="lnr lnr-hand" aria-hidden="true"></span> I'm Fê!</h5>
-					<h1>A front-end developer in Toronto</h1>
+					<h1>A full stack developer in Toronto</h1>
 					<h2>with experience in graphic design and marketing</h2>
 					<div class="buttons">
 						<a href="#about" class="btn btn2">About me</a>
@@ -139,18 +139,18 @@
 						<h2 class="subtitle">About me</h2>
 						<!-- <h3 class="title">Team player + decision maker + innovator</h3> -->
 						<p>
-							With several years of hands-on experience, I bring a practical background in front-end
-							development. My work is driven by curiosity, attention to detail, and persistence to
-							innovate and tackle complex problems. With a track record of building intuitive
-							websites and applications, I am passionate about creating seamless user experiences.
+							With several years of hands-on experience, I bring a practical background in full
+							stack development. My work is driven by curiosity, attention to detail, and
+							persistence to innovate and tackle complex problems. With a track record of building
+							intuitive websites and applications, I am passionate about creating seamless user
+							experiences.
 						</p>
 						<p>
-							In my current role as a Software Developer at Milborne Group, I am responsible for
-							developing and maintaining a cutting-edge real estate sales web app. This includes
-							resolving bugs, improving code quality, enhancing user experience, and building new
-							features to meet the evolving needs of the business (<a href="#experience"
-								>details about my experience</a
-							>).
+							As a Full Stack Developer at Milborne Group, I handle the continuous development and
+							maintenance of our cutting-edge real estate sales web app. My responsibilities include
+							bug resolution, code quality enhancement, user experience upgrades, and the addition
+							of new features to align with evolving business demands.
+							<a href="#experience">Learn more</a>.
 						</p>
 						<p>
 							I am a Juno College of Technology graduate, specializing in web development, with over
@@ -536,9 +536,13 @@
 						<li>Sass</li>
 						<li>Material UI</li>
 						<li>JavaScript</li>
-						<li>ReactJS</li>
+						<li>React.js</li>
+						<li>Next.js</li>
 						<li>GraphQL</li>
+						<li>Prisma</li>
 						<li>MongoDB</li>
+						<li>Mongoose</li>
+						<li>Apollo Server</li>
 						<li>Firebase</li>
 						<li>GitHub</li>
 						<li>GitLab</li>
@@ -553,9 +557,13 @@
 						<li>Sass</li>
 						<li>Material UI</li>
 						<li>JavaScript</li>
-						<li>ReactJS</li>
+						<li>React.js</li>
+						<li>Next.js</li>
 						<li>GraphQL</li>
+						<li>Prisma</li>
 						<li>MongoDB</li>
+						<li>Mongoose</li>
+						<li>Apollo Server</li>
 						<li>Firebase</li>
 						<li>GitHub</li>
 						<li>GitLab</li>
@@ -571,51 +579,67 @@
 					<h2 class="subtitle">Experience</h2>
 					<div class="columns">
 						<div>
-							<h3 class="title">Front End Web Developer (2021-Present)</h3>
+							<h3 class="title">Full Stack Web Developer (2021-Present)</h3>
 							<h4>Milborne Group</h4>
 							<p>
-								As a Software Developer at Milborne, I develop and maintain a real estate sales web
-								app, resolving bugs, improving code quality, enhancing user experience, adding
-								functionalities and building new features.
+								As a Full Stack Developer at Milborne, I enhance and maintain a real estate sales
+								web app, where I resolve bugs, elevate code quality, enrich user experiences, and
+								integrate new functionalities and features.
 							</p>
 							<ul>
 								<li>
-									Successfully planned, designed and developed various features with the goal of
-									automating the set up of new projects in the company’s sales web application,
-									reducing managers’ requests and redirecting the development team’s efforts away
-									from manual and repetitive tasks.
+									Successfully planned, designed, and developed features to automate new project
+									setups, significantly cutting down on manual tasks and redirecting the development
+									team’s focus to more strategic initiatives.
 								</li>
 								<li>
-									Independently built a feature that allows admins to set multiple conditions used
-									in the generation of purchase and sale agreements, including the selection of unit
-									details and documents to be inserted as a specific page of the contract, allowing
-									for each deal to be fully customized.
+									Independently built a feature that allows admins to customize purchase and sale
+									agreements by using unit and deal details as conditions to dynamically insert
+									specific documents at designated points within the contract. This ensures each
+									deal is fully customized.
 								</li>
 								<li>
 									Actively and consistently proposed and implemented UI enhancements to boost visual
-									experience and usability, as well as created table and chart reports, improving
-									data analysis and visualization, facilitating decision-making.
+									experience and usability. This includes designing tables and chart reports that
+									improved data analysis and visualization, thereby facilitating decision-making.
 								</li>
 								<li>
 									Independently redesigned the entire app utilizing Material UI styles in accordance
 									with a newly established brand identity provided by a design agency, bridging the
 									design gaps for areas that were not covered, ensuring a seamless and consistent
-									design throughout the app
-									<a href="/redesign.html">(see before and after screenshots).</a>
+									design throughout the app.
+									<a href="/redesign.html">See before/after screenshots</a>.
 								</li>
 								<li>
-									Collaborated closely with the backend developer to develop a units tracker table
-									from scratch in order to incorporate into the app a complex spreadsheet used by
-									sales admins to track deals, also allowing them to set instructions, statuses and
-									add detailed information and notes for all units in just one place.
+									Developed a custom autocomplete form field component optimized for loading and
+									searching over 5,000 brokers. The backend features a GraphQL resolver with MongoDB
+									aggregation for dynamic full name concatenation and efficient filtering.
+									Implemented pagination and sorting directly in the database, significantly
+									reducing page loading times while returning both sorted results and total match
+									counts in a single query. On the frontend, I designed a reusable advanced
+									autocomplete interface with React and Material UI's TextField and Popper, tailored
+									for enhanced usability with custom styles. It includes a debounce mechanism for
+									search input to minimize server load and improve responsiveness. I integrated the
+									IntersectionObserver to implement infinite scrolling, loading additional data
+									seamlessly as the user scrolls. This approach, combined with the ability to cancel
+									obsolete requests via AbortController, ensures that the UI remains efficient and
+									responsive to user interactions, even with large datasets.
 								</li>
 								<li>
-									Constantly tweaked the backend not only to accommodate new features, but also to
-									reactivate cron jobs for email reminders and integrate the app with a third party
-									email delivery platform, as well as develop an email tracking feature that allows
-									users to see an activity log of opened emails sent out to purchasers and realtors,
-									which offered me great exposure to backend technologies within the MERN stack and
-									GraphQL Apollo Server and schemas.
+									Designed and developed a feature that tracks opened emails using a tracking pixel
+									embedded in the email's HTML. When an email is opened, this pixel triggers a GET
+									request to the '/emailOpen' endpoint, retrieving a transparent GIF and
+									transmitting key details via query parameters. The server processes these
+									requests, updates the activity log, and records the email opening, providing
+									essential real-time data to ensure purchasers have received their documents.
+								</li>
+								<li>
+									Planned and developed an AWS Lambda function that executes daily late at night,
+									connecting directly to MongoDB to collect and compile statistics on real estate
+									transactions. This function assesses realtor performance by tracking metrics such
+									as the number of units sold, worksheets submitted, and deals rescinded, providing
+									insights over specific periods, including the last 7, 30, 90, and 365 days. These
+									analytics assist in performance analysis and support strategic business decisions.
 								</li>
 								<li>
 									Successfully upgraded the app to the latest versions of Node, React and Material
