--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
 			name="description"
 			content="With several years of hands-on experience, I bring a practical background in full stack development. My work is driven by curiosity, attention to detail, and persistence to innovate and tackle complex problems. With a track record of building intuitive websites and applications, I am passionate about creating seamless user experiences."
 		/>
-		<meta
-			name="keywords"
-			content="Full Stack Web Developer, Web Designer, Toronto, Fernanda Thiesen"
-		/>
+		<meta name="keywords" content="Full Stack Developer, Web Designer, Toronto, Fernanda Thiesen" />
 		<meta name="author" content="Fernanda Thiesen" />
 		<meta property="og:image" content="./assets/fernanda-thiesen.jpg" />
 		<meta
@@ -106,7 +103,7 @@
 			}
 		</style>
 
-		<title>Fê Codes - Fernanda Thiesen - Ful Stack Web Developer - Toronto</title>
+		<title>Fê Codes - Fernanda Thiesen - Ful Stack Developer - Toronto</title>
 	</head>
 	<body>
 		<header>
@@ -579,7 +576,7 @@
 					<h2 class="subtitle">Experience</h2>
 					<div class="columns">
 						<div>
-							<h3 class="title">Full Stack Web Developer (2021-Present)</h3>
+							<h3 class="title">Full Stack Developer (2021-Present)</h3>
 							<h4>Milborne Group</h4>
 							<p>
 								As a Full Stack Developer at Milborne, I enhance and maintain a real estate sales
